<!--
  ~ Copyright 2019 OST.com Inc
  ~
  ~   Licensed under the Apache License, Version 2.0 (the "License");
  ~   you may not use this file except in compliance with the License.
  ~   You may obtain a copy of the License at
  ~
  ~       http://www.apache.org/licenses/LICENSE-2.0
  -->

<resources tools:ignore="ExtraTranslation" xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">SampleOstSdkApplication</string>
    <string name="title_activity_login_sign_up">Sign in</string>
    <!-- Strings related to login -->
    <string name="name_hint">Name</string>
    <string name="mobile_number">Mobile Number</string>
    <string name="description">Description</string>
    <string name="action_sign_in">Sign in</string>
    <string name="action_register">Register</string>
    <string name="register_form">Register Form</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_mobilenumber">Mobile number may be incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="login_form">Login form</string>
    <string name="user_status">User Status</string>
    <string name="user_name">Name</string>
    <string name="title_activity_users_list">Token Economy</string>
    <string name="error_incorrect_name">Name might be wrong</string>
    <string name="add_device">Add Device</string>
    <string name="scan_qr">Scan QR Code</string>
    <string name="activate_user">Activate User</string>
    <string name="show_user_details">Show Details</string>
    <string name="show_paper_wallet">Show paper wallet</string>
    <string name="add_device_words">Add Device Words</string>
    <string name="execute_txn">Execute Transaction</string>
    <string name="pay_execute_txn">Pay transaction</string>
    <string name="mappy_sign_text">Sign in to continue</string>

    <string name="shr_app_name">OstDemoApp</string>
    <string name="shr_hint_username">Username</string>
    <string name="shr_hint_mobile_number">Mobile Number</string>
    <string name="shr_button_next">Next</string>
    <string name="shr_button_create_account">Create Account</string>
    <string name="shr_error_password">Password must contain at least 8 characters.</string>
    <string name="shr_error_user_name">User name is empty</string>
    <string name="shr_filter_title">Filter</string>
    <string name="shr_search_title">Search</string>
    <string name="shr_product_title">Title</string>
    <string name="shr_product_description">Secondary text</string>

    <string name="view_details">View Details</string>
    <string name="ost_user_id">Ost-User-Id</string>
    <string name="ost_user_status">User Status</string>
    <string name="ost_token_id">Token Id</string>
    <string name="ost_user_token_holder">Token Holder Address</string>
    <string name="ost_user_device_manager">Device Manager Address</string>
    <string name="ost_user_recovery_owner_address">Recovery Owner Address</string>
    <string name="ost_user_device_address">Device Address</string>
    <string name="device_name">Device Name</string>
    <string name="device_status">Device Status</string>

    <string name="setup_wallet">Set Up Your Wallet</string>
    <string name="paper_wallet">Paper Wallet</string>
    <string name="ost_welcome_text">Welcome To OST Powered Token Economy</string>
    <string name="let_setup_wallet">Lets Setup Your Wallet.</string>
    <string name="enter_pin">Enter 6 digits pin to secure your wallet. </string>
    <string name="six_digit_pin">6 Digit Pin </string>
    <string name="current_pin">Current Pin: </string>
    <string name="new_pin">New Pin: </string>
    <string name="reset_pin">Reset Pin</string>
    <string name="enter_six_digit_pin">Please enter 6 Digit Pin.</string>
    <string name="new_old_pin_same">New Pin cannot be same as Old.</string>
    <string name="spending_limit">Spending Limit: </string>
    <string name="spending_limit_amount">Max spending limit for session </string>
    <string name="session_expiration">Session Expiration: </string>
    <string name="no_of_days_expiry">Enter number of days for expiry.</string>
    <string name="valid_number_of_days">Please enter valid number of days, less than 365 days.</string>
    <string name="create_session">Create Session</string>
    <string name="valid_spending_limt">Please enter valid spending limit.</string>
    <string name="done">Done</string>

    <!-- OstDemoApp backdrop menu labels -->
    <string name="shr_featured_label">Featured</string>
    <string name="shr_apartment_label">Apartment</string>
    <string name="shr_accessories_label">Accessories</string>
    <string name="shr_shoes_label">Shoes</string>
    <string name="shr_tops_label">Tops</string>
    <string name="shr_bottoms_label">Bottoms</string>
    <string name="shr_dresses_label">Dresses</string>
    <string name="shr_account_label">My Account</string>
    <string name="device_recovery">Device recovery</string>
    <string name="abort_device_recovery">Abort Device recovery</string>
    <string name="device_abort_recovery">Device abort recovery</string>
    <string name="qr_perform">QR Perform</string>
    <string name="enter_40_char_address">Enter 40 character address</string>
    <string name="sync_user">Sync user</string>
    <string name="logout_all_sessions">Logout all Sessions</string>
    <string name="app_logout">App logout</string>
    <string name="see_your_paper_wallet">See your paper wallet</string>
    <string name="setup_your_wallet">Setup your Wallet</string>
    <string name="show_qr_code_to_authorize_device">Show QR Code to Authorize Device</string>
    <string name="authorize_device_using_mnemonics">Authorize device using mnemonics</string>
    <string name="ost_user_recovery_address">Recovery Address</string>
    <string name="rule_transaction">Rule Transaction</string>
</resources>
