<!--
  ~ Copyright 2019 OST.com Inc
  ~
  ~   Licensed under the Apache License, Version 2.0 (the "License");
  ~   you may not use this file except in compliance with the License.
  ~   You may obtain a copy of the License at
  ~
  ~       http://www.apache.org/licenses/LICENSE-2.0
  -->

<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.ost.sampleostsdkapplication.UsersListActivity">
    <item
        android:id="@+id/user_detail"
        android:orderInCategory="100"
        android:title="@string/show_user_details"
        app:showAsAction="never" />
    <item
        android:id="@+id/activate_user"
        android:orderInCategory="100"
        android:title="@string/setup_your_wallet"
        app:showAsAction="never" />
    <item
        android:id="@+id/show_paper_wallet"
        android:orderInCategory="100"
        android:title="@string/see_your_paper_wallet"
        app:showAsAction="never" />
    <item
        android:id="@+id/add_session"
        android:orderInCategory="100"
        android:title="@string/create_session"
        app:showAsAction="never" />
    <item
        android:id="@+id/scan_qr"
        android:orderInCategory="100"
        android:title="@string/scan_qr"
        app:showAsAction="never" />
    <item
        android:id="@+id/add_device"
        android:orderInCategory="100"
        android:title="@string/show_qr_code_to_authorize_device"
        app:showAsAction="never" />
    <item
        android:id="@+id/device_words"
        android:orderInCategory="100"
        android:title="@string/authorize_device_using_mnemonics"
        app:showAsAction="never" />
    <item
        android:id="@+id/transactions"
        android:orderInCategory="100"
        android:visible="false"
        android:title="@string/execute_txn"
        app:showAsAction="never" />
    <item
        android:id="@+id/pay_txn"
        android:orderInCategory="100"
        android:visible="true"
        android:title="@string/execute_txn"
        app:showAsAction="never" />
    <item
        android:id="@+id/reset_pin"
        android:orderInCategory="100"
        android:title="@string/reset_pin"
        app:showAsAction="never" />
    <item
        android:id="@+id/device_recovery"
        android:orderInCategory="100"
        android:title="@string/device_recovery"
        app:showAsAction="never" />
    <item
        android:id="@+id/device_abort_recovery"
        android:orderInCategory="100"
        android:title="@string/device_abort_recovery"
        app:showAsAction="never" />
    <item
        android:id="@+id/device_sessions_logout"
        android:orderInCategory="100"
        android:title="@string/logout_all_sessions"
        app:showAsAction="never" />
    <item
        android:id="@+id/app_logout"
        android:orderInCategory="100"
        android:title="@string/app_logout"
        app:showAsAction="never" />
</menu>