<!--
  ~ Copyright 2019 OST.com Inc
  ~
  ~   Licensed under the Apache License, Version 2.0 (the "License");
  ~   you may not use this file except in compliance with the License.
  ~   You may obtain a copy of the License at
  ~
  ~       http://www.apache.org/licenses/LICENSE-2.0
  -->

<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="left"
        android:layout_marginBottom="5dp"
        android:text="@string/spending_limit" />

    <android.support.design.widget.TextInputLayout
        android:id="@+id/spending_limit"
        style="@style/Widget.OstDemoApp.TextInputLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:hint="@string/spending_limit_amount"
        app:errorEnabled="true">

        <android.support.design.widget.TextInputEditText
            android:id="@+id/spending_limit_edit_box"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="number" />
    </android.support.design.widget.TextInputLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="left"
        android:layout_marginBottom="5dp"
        android:text="@string/session_expiration" />

    <android.support.design.widget.TextInputLayout
        android:id="@+id/session_expiry"
        style="@style/Widget.OstDemoApp.TextInputLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:hint="@string/no_of_days_expiry"
        app:errorEnabled="true">

        <android.support.design.widget.TextInputEditText
            android:id="@+id/session_expiry_edit_box"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="number" />
    </android.support.design.widget.TextInputLayout>
</LinearLayout>