<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <TextView
        android:id="@+id/first_text_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="left"
        android:layout_marginBottom="5dp"
        android:text="@string/current_pin" />

    <android.support.design.widget.TextInputLayout
        android:id="@+id/first_text_input"
        style="@style/Widget.OstDemoApp.TextInputLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:hint="@string/six_digit_pin"
        app:errorEnabled="true">

        <android.support.design.widget.TextInputEditText
            android:id="@+id/first_edit_box"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="number" />
    </android.support.design.widget.TextInputLayout>

    <TextView
        android:id="@+id/second_text_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="left"
        android:layout_marginBottom="5dp"
        android:text="@string/new_pin" />

    <android.support.design.widget.TextInputLayout
        android:id="@+id/second_text_input"
        style="@style/Widget.OstDemoApp.TextInputLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:hint="@string/six_digit_pin"
        app:errorEnabled="true">

        <android.support.design.widget.TextInputEditText
            android:id="@+id/second_edit_box"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="number" />
    </android.support.design.widget.TextInputLayout>
</LinearLayout>