<?xml version="1.0" encoding="utf-8"?>
<!--
  ~ Copyright 2019 OST.com Inc
  ~
  ~   Licensed under the Apache License, Version 2.0 (the "License");
  ~   you may not use this file except in compliance with the License.
  ~   You may obtain a copy of the License at
  ~
  ~       http://www.apache.org/licenses/LICENSE-2.0
  -->

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/loginPageBackgroundColor"
    tools:context=".fragments.UserDetailsFragment">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ProgressBar
            android:id="@+id/progress_bar_sync"
            style="?android:attr/progressBarStyleLarge"
            android:layout_centerInParent="true"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:visibility="gone" />

        <LinearLayout
            android:id="@+id/user_detail_page"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:clipChildren="false"
            android:clipToPadding="false"
            android:orientation="vertical"
            android:padding="24dp"
            android:paddingTop="16dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginBottom="20dp"
                android:text="@string/view_details"
                android:textAppearance="@style/TextAppearance.MaterialComponents.Headline6" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="start"
                android:layout_marginBottom="5dp"
                android:text="@string/ost_user_id" />

            <android.support.design.widget.TextInputLayout
                android:id="@+id/ost_user_id_input"
                style="@style/Widget.OstDemoApp.TextInputLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/ost_user_id_edit"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="text"
                    android:maxLines="1" />
            </android.support.design.widget.TextInputLayout>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="start"
                android:layout_marginBottom="5dp"
                android:text="@string/ost_user_status" />

            <android.support.design.widget.TextInputLayout
                android:id="@+id/ost_user_status"
                style="@style/Widget.OstDemoApp.TextInputLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/ost_user_status_edit"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="text"
                    android:maxLines="1" />
            </android.support.design.widget.TextInputLayout>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="start"
                android:layout_marginBottom="5dp"
                android:text="@string/ost_token_id" />

            <android.support.design.widget.TextInputLayout
                android:id="@+id/ost_token_id"
                style="@style/Widget.OstDemoApp.TextInputLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/ost_token_id_edit"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="text"
                    android:maxLines="1" />
            </android.support.design.widget.TextInputLayout>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="start"
                android:layout_marginBottom="5dp"
                android:text="@string/ost_user_token_holder" />

            <android.support.design.widget.TextInputLayout
                android:id="@+id/ost_user_token_holder"
                style="@style/Widget.OstDemoApp.TextInputLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/ost_user_token_holder_edit"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="text"
                    android:maxLines="1" />
            </android.support.design.widget.TextInputLayout>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="start"
                android:layout_marginBottom="5dp"
                android:text="@string/ost_user_device_manager" />

            <android.support.design.widget.TextInputLayout
                android:id="@+id/ost_user_device_manager"
                style="@style/Widget.OstDemoApp.TextInputLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/ost_user_device_manager_edit"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="text"
                    android:maxLines="1" />
            </android.support.design.widget.TextInputLayout>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="start"
                android:layout_marginBottom="5dp"
                android:text="@string/ost_user_recovery_owner_address" />

            <android.support.design.widget.TextInputLayout
                android:id="@+id/ost_user_recovery_key"
                style="@style/Widget.OstDemoApp.TextInputLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/ost_user_recovery_owner_address_edit"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="text"
                    android:maxLines="1" />
            </android.support.design.widget.TextInputLayout>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="start"
                android:layout_marginBottom="5dp"
                android:text="@string/ost_user_recovery_address" />

            <android.support.design.widget.TextInputLayout
                android:id="@+id/ost_user_recovery_address"
                style="@style/Widget.OstDemoApp.TextInputLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/ost_user_recover_address_edit"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="text"
                    android:maxLines="1" />
            </android.support.design.widget.TextInputLayout>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="start"
                android:layout_marginBottom="5dp"
                android:text="@string/ost_user_device_address" />

            <android.support.design.widget.TextInputLayout
                android:id="@+id/ost_user_device_address"
                style="@style/Widget.OstDemoApp.TextInputLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/ost_user_device_address_edit"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="text"
                    android:maxLines="1" />
            </android.support.design.widget.TextInputLayout>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="start"
                android:layout_marginBottom="5dp"
                android:text="@string/device_name"
                android:visibility="gone"/>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/ost_user_device_name"
                style="@style/Widget.OstDemoApp.TextInputLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:visibility="gone">

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/ost_user_device_name_edit"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="text"
                    android:maxLines="1" />
            </android.support.design.widget.TextInputLayout>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="start"
                android:layout_marginBottom="5dp"
                android:text="@string/device_status" />

            <android.support.design.widget.TextInputLayout
                android:id="@+id/ost_user_device_status"
                style="@style/Widget.OstDemoApp.TextInputLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/ost_user_device_status_edit"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="text"
                    android:maxLines="1" />
            </android.support.design.widget.TextInputLayout>

            <Button
                android:id="@+id/btn_sync_user"
                android:text="@string/sync_user"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
        </LinearLayout>
    </RelativeLayout>
</ScrollView>
