<!--
  ~ Copyright 2019 OST.com Inc
  ~
  ~   Licensed under the Apache License, Version 2.0 (the "License");
  ~   you may not use this file except in compliance with the License.
  ~   You may obtain a copy of the License at
  ~
  ~       http://www.apache.org/licenses/LICENSE-2.0
  -->

<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:layout_marginBottom="20dp"
        android:text="@string/ost_welcome_text"
        android:textSize="18sp"
        android:textAppearance="@style/TextAppearance.MaterialComponents.Headline6" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:layout_marginBottom="20dp"
        android:text="@string/let_setup_wallet"
        android:textSize="15sp"
        android:textAppearance="@style/TextAppearance.MaterialComponents.Headline6" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:layout_marginBottom="20dp"
        android:text="@string/enter_pin"
        android:textSize="15sp"
        android:textAppearance="@style/TextAppearance.MaterialComponents.Headline6" />

    <android.support.design.widget.TextInputLayout
        android:id="@+id/user_setup_pin"
        style="@style/Widget.OstDemoApp.TextInputLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:hint="6 Digit Pin"
        app:errorEnabled="true">

        <android.support.design.widget.TextInputEditText
            android:id="@+id/user_setup_pin_edit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="number" />
    </android.support.design.widget.TextInputLayout>
</LinearLayout>