<android.support.v7.widget.CardView xmlns:card_view="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/card_view"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="@dimen/activity_horizontal_margin"
    card_view:cardElevation="10dp">

    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/profile"
            android:layout_width="148dp"
            android:layout_height="150dp"
            android:scaleType="centerCrop"
            android:src="@drawable/ic_fingerprint_error"
            card_view:layout_constraintBottom_toBottomOf="parent"
            card_view:layout_constraintStart_toStartOf="parent"
            card_view:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/name"
            android:layout_width="155dp"
            android:layout_height="28dp"
            android:layout_marginStart="25dp"
            android:layout_marginTop="4dp"
            android:layout_marginEnd="24dp"
            android:layout_marginBottom="7dp"
            android:text="@string/user_name"
            android:maxLines="2"
            card_view:layout_constraintBottom_toTopOf="@+id/description"
            card_view:layout_constraintEnd_toEndOf="parent"
            card_view:layout_constraintStart_toEndOf="@+id/profile"
            card_view:layout_constraintTop_toBottomOf="@+id/mobile_number" />

        <TextView
            android:id="@+id/mobile_number"
            android:layout_width="155dp"
            android:layout_height="28dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="8dp"
            android:layout_marginBottom="4dp"
            android:text="@string/mobile_number"
            card_view:layout_constraintBottom_toTopOf="@+id/name"
            card_view:layout_constraintEnd_toEndOf="parent"
            card_view:layout_constraintStart_toEndOf="@+id/profile"
            card_view:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/description"
            android:layout_width="152dp"
            android:layout_height="54dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="5dp"
            android:layout_marginEnd="8dp"
            android:layout_marginBottom="11dp"
            android:text="@string/description"
            android:maxLines="10"
            card_view:layout_constraintBottom_toBottomOf="parent"
            card_view:layout_constraintEnd_toEndOf="parent"
            card_view:layout_constraintStart_toEndOf="@+id/profile"
            card_view:layout_constraintTop_toBottomOf="@+id/name" />


    </android.support.constraint.ConstraintLayout>

</android.support.v7.widget.CardView>